--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         
         <div class="intro">
   <h1 class="name">Leon Kim</h1>
-  <h2 class="tagline"><strong class="bold-text">Software developer, maybe.</strong></h2>
+  <h2 class="tagline"><strong class="bold-text">Software developer, probably.</strong></h2>
 </div>
 
 
@@ -71,7 +71,7 @@
         
   
   <div class="bio">
-  <p>A guy who holds himself to high standards, often spiraling into existential pain from noticing the giant gap between expectations and reality. Passionate about eating, drinking, and powerlifting as a hobby. Absolutely adores fragrant things and the joy of driving.</p>
+  <p>A guy who sets high standards, only to occasionally spiral into existential dread when expectations and reality refuse to align. Passionate about eating, drinking, and powerlifting—though always with an emphasis on lifting pretty. A connoisseur of fragrant things, an unapologetic lover of the open road, and someone who somehow functions on minimal sleep. Proud caretaker of three indoor cats and unofficial landlord to a legion of outdoor ones.</p>
 
 </div>
 
