--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         
         <div class="intro">
   <h1 class="name">Leon Kim</h1>
-  <h2 class="tagline"><strong class="bold-text">Software developer, probably.</strong></h2>
+  <h2 class="tagline"><strong class="bold-text">Software Engineer, probably.</strong></h2>
 </div>
 
 
