--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         
   
   <div class="bio">
-  <p>A guy who sets high standards, only to occasionally spiral into existential dread when expectations and reality refuse to align. Passionate about eating, drinking, and powerlifting—though always with an emphasis on lifting pretty. A connoisseur of fragrant things, an unapologetic lover of the open road, and someone who somehow functions on minimal sleep. Proud caretaker of three indoor cats and unofficial landlord to a legion of outdoor ones.</p>
+  <p>A guy who sets high standards, only to occasionally spiral into existential dread when expectations and reality refuse to align. Passionate about eating, drinking, and powerlifting—though always with an emphasis on lifting pretty. A connoisseur of fragrant things, an unapologetic lover of the open road, and someone who somehow functions on minimal sleep. Proud caretaker of five indoor cats and unofficial landlord to a legion of outdoor ones.</p>
 
 </div>
 
